Primer release beta

--- a/app/index.html
+++ b/app/index.html
@@ -17,12 +17,12 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Momo</a></h1>
+								<h1><a href="index.html" id="logo" style="color:black">Momo</a></h1>
 								<hr />
 								<p>Finca de Descanso  </p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly" style="background-color: black;">Start</a>
+								<a href="#banner" class="button circled scrolly" style="background-color: black;">Iniciar</a>
 							</footer>
 						</div>
 
@@ -30,13 +30,13 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Inicio</a></li>
+								<li><a href="https://g.page/tienda-el-bosque-antioquia?share">¿Cómo llegar?</a></li>
 								<li>
 									<a href="#">Contactanos</a>
 									<ul>
-										<li><a href="#" class="icon brands fa-facebook-f"> Facebook</a></li>
-										<li><a href="#" class="icon brands fa-instagram"> Instagram</a></li>
-										<li><a href="#" class="icon brands fa-whatsapp"> Whatsapp</a></li>
-										<li><a href="#" class="icon brands fa-telegram"> ¿Como llegar?</a></li>
+										<li><a href="https://www.facebook.com/profile.php?id=100080719321788" class="icon brands fa-facebook-f"> Facebook</a></li>
+										<li><a href="https://instagram.com/finca_sanje?igshid=YmMyMTA2M2Y=" class="icon brands fa-instagram"> Instagram</a></li>
+										<li><a href="https://wa.link/gaq3u9" class="icon brands fa-whatsapp"> Whatsapp</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -59,83 +59,83 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03133.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03118.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Zonas humedas</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Tienes un espacio para relajarte en familia con agua natural</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03121.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Zonas Familiares</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Zonas perfectas para compartir en familia</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00001.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Sala de estar</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Comodos espacios para descansar dentro de la casa</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00028.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Zona Común dormitorios</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>¿Que tal una charladita antes de dormir? Tambien tienes el espacio</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03141.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
+								<h3><a href="#">Cocina Dotada</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Si eres de esas personas que prefiere cocinar por su cuenta</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00020.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Cuartos comodos</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Tres cuartos grandes, para que te acomodes con tu familia</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03131.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Para tus necesidades</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Bajar a la quebrada, hacer un asado, pasear el perro, lo que tú decidas</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03144.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Zonas comunes casa</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Diferentes espacios de esparcimiento para estar en familia</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03136.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Comedor</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Si te encanta comer en familia como a nosotros, incluso puedes hacerlo</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03149.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00036.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
+								<h3><a href="#">Balcon 360</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Si te gusta recibir la brisa y ver los alrededores</p>
 						</article>
 
 					</div>
@@ -147,20 +147,26 @@
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03131.jpeg" alt="" /></a>
 						<header>
-							<h2><a href="#">Que nos hace diferentes?</a></h2>
+							<h2><a href="#"> <strong> Que nos hace diferentes? </strong> </a></h2>
 							<p>
-								Disponemos paa ti un espacio familiar, en medio de la naturaleza, en el que puedes sentirte
+								Nos preocupamos por ofrecerte una experiencia diferente, familiar y acogedora.
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							Nuestro principal objetivo es ofrecerte un espacio para ti y tu familia, en el cúal te salgas de la monotonia,
+							te recargues en un ambiente natural y descanses escuchando la naturaleza. No nos preocupamos por ofrecerte la mejor piscina, los mayores lujos, pues en la sociedad del consumo,
+							ya hay muchos oferentes que cubren esta propuesta; nos preocupa que estes tranquilo, que te desconectes, que tengas unas fechas distintas, tranquilas y en familia.
+							<br>
+							<br>
+							Para nostros, la familia es lo más importante y en este emprendimiento queremos transmitirte nuestra huella, <strong> NUNCA </strong> hemo usado
+							este espacio para algo diferente a <strong> UNIRNOS y FORTALECERNOS.</strong> Si tú y tu familia llegan a tomar la iniciativa, esperamos que
+							tengan la misma conexión que nosotros, y teminen su estacia, con la misma satisfacción y tranquilidad a la que nosotros sentimos,
+							cuando estamos en este lugar. Si es así, habrá valido la pena todo el esfuerzo...
+							<br>
+							<br>
+							&copy; Famili Gomez Valero
+							
+
 						</p>
 						<footer>
 							<a href="#footer" class="button circled scrolly" style="background-color: black;">Contactar</a>
@@ -183,10 +189,10 @@
 										</header>
 										<p>Aca te dejamos todas nuestras redes sociales, no te preocupes, respondemos super rápido. Estamos a un click de distancia</p>
 										<ul class="icons">
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-whatsapp"><span class="label">Whatsapp</span></a></li>
-											<li><a href="#" class="icon brands fa-telegram"><span class="label">¿Cmo llegar?</span></a></li>
+											<li><a href="https://www.facebook.com/profile.php?id=100080719321788" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="https://instagram.com/finca_sanje?igshid=YmMyMTA2M2Y=" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://wa.link/gaq3u9" class="icon brands fa-whatsapp"><span class="label">Whatsapp</span></a></li>
+											<li><a href="https://g.page/tienda-el-bosque-antioquia?share" class="icon brands fa-telegram"><span class="label">¿Cmo llegar?</span></a></li>
 										</ul>
 									</section>
 
