Primer beta, corrección tamaño tarjetas y ortografia de todo, menos tarjetas

--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,10 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo" style="color:black">Momo</a></h1>
+								<a href="#banner" class="button circled scrolly" style="background-color: black;"> <strong style="color:white"> MOMO </strong></a>
+								<p> <strong style="color: white;" > Finca de Descanso  </strong> </p>
 								<hr />
-								<p>Finca de Descanso  </p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly" style="background-color: black;">Iniciar</a>
-							</footer>
 						</div>
 
 					<!-- Nav -->
@@ -63,7 +60,7 @@
 							<header>
 								<h3><a href="#">Zonas humedas</a></h3>
 							</header>
-							<p>Tienes un espacio para relajarte en familia con agua natural</p>
+							<p>Espacio relajante con agua natural</p>
 						</article>
 
 						<article>
@@ -85,9 +82,9 @@
 						<article>
 							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00028.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Zona Común dormitorios</a></h3>
+								<h3><a href="#">Zona Común</a></h3>
 							</header>
-							<p>¿Que tal una charladita antes de dormir? Tambien tienes el espacio</p>
+							<p>¿Que tal una charladita antes de dormir?</p>
 						</article>
 
 						<article>
@@ -103,23 +100,23 @@
 							<header>
 								<h3><a href="#">Cuartos comodos</a></h3>
 							</header>
-							<p>Tres cuartos grandes, para que te acomodes con tu familia</p>
+							<p>Tres cuartos grandes, para que tu comodidad</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03131.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03127.jpeg" alt="" /></a>
 							<header>
 								<h3><a href="#">Para tus necesidades</a></h3>
 							</header>
-							<p>Bajar a la quebrada, hacer un asado, pasear el perro, lo que tú decidas</p>
+							<p>Bajar a la quebrada, hacer un asado, pasear el perro</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image03144.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Zonas comunes casa</a></h3>
+								<h3><a href="#">Zonas comunes</a></h3>
 							</header>
-							<p>Diferentes espacios de esparcimiento para estar en familia</p>
+							<p>Diferentes espacios de esparcimiento</p>
 						</article>
 
 						<article>
@@ -127,13 +124,13 @@
 							<header>
 								<h3><a href="#">Comedor</a></h3>
 							</header>
-							<p>Si te encanta comer en familia como a nosotros, incluso puedes hacerlo</p>
+							<p>Si te encanta comer en familia como a nosotros</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="https://storage.googleapis.com/meli-prueba-tecnica-publico/finca/image00036.jpeg" alt="" /></a>
 							<header>
-								<h3><a href="#">Balcon 360</a></h3>
+								<h3><a href="#">Balcón 360</a></h3>
 							</header>
 							<p>Si te gusta recibir la brisa y ver los alrededores</p>
 						</article>
@@ -153,18 +150,18 @@
 							</p>
 						</header>
 						<p>
-							Nuestro principal objetivo es ofrecerte un espacio para ti y tu familia, en el cúal te salgas de la monotonia,
+							Nuestro principal objetivo es ofrecerte un espacio para ti y tu familia, en el cúal te salgas de la monotonía,
 							te recargues en un ambiente natural y descanses escuchando la naturaleza. No nos preocupamos por ofrecerte la mejor piscina, los mayores lujos, pues en la sociedad del consumo,
 							ya hay muchos oferentes que cubren esta propuesta; nos preocupa que estes tranquilo, que te desconectes, que tengas unas fechas distintas, tranquilas y en familia.
 							<br>
 							<br>
-							Para nostros, la familia es lo más importante y en este emprendimiento queremos transmitirte nuestra huella, <strong> NUNCA </strong> hemo usado
+							Para nostros, la familia es lo más importante y en este emprendimiento queremos transmitirte nuestra huella, <strong> NUNCA </strong> hemos usado
 							este espacio para algo diferente a <strong> UNIRNOS y FORTALECERNOS.</strong> Si tú y tu familia llegan a tomar la iniciativa, esperamos que
-							tengan la misma conexión que nosotros, y teminen su estacia, con la misma satisfacción y tranquilidad a la que nosotros sentimos,
+							tengan la misma conexión que nosotros, y teminen su estadía, con la misma satisfacción y tranquilidad a la que nosotros sentimos,
 							cuando estamos en este lugar. Si es así, habrá valido la pena todo el esfuerzo...
 							<br>
 							<br>
-							&copy; Famili Gomez Valero
+							&copy; Familia Gómez Valero
 							
 
 						</p>
